MComix 0.93

    - Fixed sorting in the bookmark edit dialog not working as expected.

MComix 0.92
Release date: 27.05.2011

    - Fixed a bug that made MComix save preview thumbnails to disk
      even if this behaviour was disabled in the preferences window.

    - Fixed a bug in the the archive editor that prevented it from actually
      saving the modified archive on Win32.

    - Added limited support for password-protected ZIP and RAR archives.
      For ZIP archives, Python >= 2.6 is required. For RAR archives,
      only extraction with libunrar/unrar.dll is supported.

    - Added a combobox to the library dialog to enable sorting of books
      based on file name, full path, or file size.

    - If a library collection has sub-collections, the books from these
      sub-collections will be shown as well when the collection is opened.

    - The "Bookmarks" menu can be accessed via the normal menu bar again.
      "Clear bookmarks" has been removed in favour of using the "Edit
      bookmarks" dialog.
      (by Alan Horkan)

    - Several usability improvements were done to the Enhance, Edit and
      Library dialogs.
      (by Alan Horkan)

    - If applications for extracting RAR or 7Z archives aren't found on
      start-up, MComix will no longer allow selecting the corresponding file
      types in the "Open" dialog.
      (suggested by Alan Horkan)

    - The "Copy" menu item will now copy the current file name to the
      clipboard, in addition to the currently opened page as bitmap.

    - The currently opened file or archive can now be deleted using
      File -> Delete, or by pressing F8.

    - Added an option to use the first page of an archive as application
      icon instead of the standard MComix icon. (inspired by Alexandr
      Domrachev)

    - Added an option to manually change the user interface language
      used by MComix. Changes to the language require an application
      restart to take effect.
